chore(ci): ignore gh-pages branch for workflow
Any file in this branch will not need to be subject to continuous
integration.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,14 @@ name: CI
 
 on:
   push:
+    branches-ignore:
+      - gh-pages
   pull_request:
     types:
       - opened
       - synchronize
+    branches-ignore:
+      - gh-pages
   release:
     types:
       - published
