chore(ci): fix incorrect relative path in web publish step
The default working directory property affects run steps, not other
actions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,4 +198,4 @@ jobs:
         if: github.ref == 'refs/heads/master' # Only run for pushes to the master branch
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ../target/web
+          publish_dir: target/web
