chore(deny.toml): remove now unused patch source from config
This avoids a warning.

--- a/deny.toml
+++ b/deny.toml
@@ -82,4 +82,4 @@ highlight = "all"
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
-allow-git = ["https://github.com/joshua-maros/ouroboros", "https://github.com/RustAudio/ogg"]
+allow-git = ["https://github.com/joshua-maros/ouroboros"]
