chore(deps): tweak Renovate config
This new configuration should both reduce notification noise and do a
better job at keeping the project dependencies up to date.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base", ":preserveSemverRanges"
+    "config:base"
   ],
-  "schedule": ["on monday"],
+  "addLabels": ["dependencies"],
+  "automergeType": "branch",
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
