--- a/packages/optivorbis/Cargo.toml
+++ b/packages/optivorbis/Cargo.toml
@@ -42,7 +42,7 @@ crate-type = ["lib", "cdylib"]
 
 [build-dependencies]
 git2 = { version = "0.15.0", default-features = false }
-chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
+time = { version = "0.3.11", default-features = false, features = ["std"] }
 
 [dev-dependencies]
 pretty_env_logger = "0.4.0"
