--- a/deny.toml
+++ b/deny.toml
@@ -67,7 +67,11 @@ allow = [
 	# according to https://opensource.org/licenses/0BSD it is a modification
 	# of the ISC license, which is compatible. Its text is also extremely
 	# simple and allows using the code for any purpose
-	"0BSD"
+	"0BSD",
+	# Permissive license used by the Unicode consortium, similar in spirit
+	# to other permissive licenses:
+	# https://spdx.org/licenses/Unicode-DFS-2016.html
+	"Unicode-DFS-2016"
 ]
 unused-allowed-license = "allow"
 private = { ignore = true }
@@ -82,4 +86,3 @@ highlight = "all"
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
-allow-git = ["https://github.com/joshua-maros/ouroboros"]
