ci: replace npm install by npm ci
npm ci is the intended command for CI environments that is guaranteed to not modify any files.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,7 +184,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: 🔨 Build web demo
-        run: npm install
+        run: npm ci
 
       - name: '🔍 Static analysis: ESLint'
         run: npm run lint
