--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,11 +33,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 🧰 Install MSRV toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: ${{ env.MSRV }}
-          profile: minimal
-          default: true
 
       - name: 💨 Cache Rust artifacts
         uses: Swatinem/rust-cache@v2
@@ -84,12 +82,9 @@ jobs:
           fetch-depth: 0 # Keep the commit history for proper version information
 
       - name: 🧰 Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@nightly
         with:
-          toolchain: nightly
           target: ${{ matrix.target }}
-          profile: minimal
-          default: true
           components: rust-src, rustfmt, clippy
 
       - name: 🧰 Install ARM64 cross-compilation toolchain
@@ -165,11 +160,8 @@ jobs:
           fetch-depth: 0 # Keep the commit history for proper version information
 
       - name: 🧰 Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@nightly
         with:
-          toolchain: nightly
-          profile: minimal
-          default: true
           components: rust-src
 
       - name: 🧰 Setup Node.js
