fix(deps): temporarily pin wasm-bindgen to 0.2.83 to fix critical regression
This regression rendered the OptiVorbis web demo unusable. Upstream
issue: https://github.com/rustwasm/wasm-bindgen/issues/3276

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,5 +10,7 @@
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
       "automerge": true
     }
-  ]
+  ],
+  "description": "TODO The dependencies ignored below workaround upstream regressions",
+  "ignoreDeps": ["wasm-bindgen"]
 }
