--- a/packages/optivorbis/Cargo.toml
+++ b/packages/optivorbis/Cargo.toml
@@ -32,7 +32,9 @@ slice-group-by = "0.3.0"
 
 log = "0.4.17"
 
-wasm-bindgen = { version = "0.2.84", default-features = false, optional = true }
+# Pin wasm-bindgen as a temporary workaround for a critical regression:
+# https://github.com/rustwasm/wasm-bindgen/issues/3276
+wasm-bindgen = { version = "=0.2.83", default-features = false, optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 console_log = { version = "0.2.0", features = ["color"], optional = true }
 console_error_panic_hook = { version = "0.1.7", optional = true }
