ci: pass -Zdoctest-xcompile to cargo test to run doctests
By default, cargo test does not run doctests when the target triple does
not match the host triple. There are some valid reasons for that to be
the case, but we didn't notice until now because no warnings were
outputted: the doctests were just silently skipped.

Let's use unstable Rust features to run those tests as originally
intended.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
         uses: EmbarkStudios/cargo-deny-action@v1
 
       - name: ✔️ Run tests
-        run: cargo test --release --target ${{ matrix.target }}
+        run: cargo test --release --target ${{ matrix.target }} -Zdoctest-xcompile
           -p optivorbis -p optivorbis_cli -p vorbis_bitpack
 
       - name: 📚 Build documentation
