--- a/packages/optivorbis_cli/Cargo.toml
+++ b/packages/optivorbis_cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "optivorbis_cli"
 description = "Command-line interface application for lossless Vorbis optimization and repair"
-authors = ["Alejandro González"]
+authors = ["Alejandro González <me@alegon.dev>"]
 license = "AGPL-3.0-or-later"
 version = "0.1.2"
 repository = "https://github.com/OptiVorbis/OptiVorbis"
