--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,21 @@
 members = ["packages/*"]
 default-members = ["packages/optivorbis", "packages/optivorbis_cli"]
 
+[workspace.package]
+authors = ["Alejandro González <me@alegon.dev>"]
+version = "0.1.2"
+homepage = "https://optivorbis.github.io/OptiVorbis"
+repository = "https://github.com/OptiVorbis/OptiVorbis"
+keywords = ["audio", "ogg", "vorbis", "optimization", "compression"]
+categories = ["compression", "multimedia::audio"]
+edition = "2021"
+rust-version = "1.64"
+
+[workspace.dependencies]
+optivorbis = { version = "0.1.2", path = "packages/optivorbis" }
+vorbis_bitpack = { version = "0.1.1", path = "packages/vorbis_bitpack" }
+log = "0.4.17"
+
 [profile.release]
 lto = "fat"
 codegen-units = 1
