--- a/packages/optivorbis_afl_fuzz_target/Cargo.toml
+++ b/packages/optivorbis_afl_fuzz_target/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 publish = false
 
 [dependencies]
-optivorbis = { version = "0.1.1", path = "../optivorbis" }
+optivorbis.workspace = true
 afl = "0.12.16"
