revert: fix(deps): temporarily pin wasm-bindgen to 0.2.83 to fix critical regression
The upstream issue was fixed, so we no longer need to pin the
dependency.

Refs: fb4f07aaceaf4d3081a3330bd191ccec4b3557d7

--- a/deny.toml
+++ b/deny.toml
@@ -86,3 +86,6 @@ highlight = "all"
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
+allow-git = [
+	"https://github.com/rustwasm/wasm-bindgen"
+]
