chore(ci): simplify non-fork PR exclusion condition

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,8 @@ jobs:
 
     runs-on: ubuntu-20.04
 
-    # Only run if this is not a pull request, or for pull requests on forks
-    if: github.event_name != 'pull_request' ||
-      github.event.pull_request.head.repo.full_name != 'OptiVorbis/OptiVorbis'
+    # Exclude in-repo PRs from running this job
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork
 
     steps:
       - name: 📥 Checkout source
@@ -67,9 +66,8 @@ jobs:
     name: CI (${{ matrix.target }})
     runs-on: ${{ matrix.runner }}
 
-    # Only run if this is not a pull request, or for pull requests on forks
-    if: github.event_name != 'pull_request' ||
-      github.event.pull_request.head.repo.full_name != 'OptiVorbis/OptiVorbis'
+    # Exclude in-repo PRs from running this job
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork
 
     steps:
       - name: 📥 Checkout source
@@ -130,9 +128,8 @@ jobs:
     needs: ci
     runs-on: ubuntu-20.04
 
-    # Only run if this is not a pull request, or for pull requests on forks
-    if: github.event_name != 'pull_request' ||
-      github.event.pull_request.head.repo.full_name != 'OptiVorbis/OptiVorbis'
+    # Exclude in-repo PRs from running this job
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork
 
     defaults:
       run:
