chore(cargo-deny): silence some annoying warnings

--- a/deny.toml
+++ b/deny.toml
@@ -82,6 +82,15 @@ private = { ignore = true }
 [bans]
 multiple-versions = "warn"
 highlight = "all"
+skip-tree = [
+	# afl pulls some older dependency versions, but that's not a
+	# concern for end-users
+	{ name = "afl", version = "=0.13.0" },
+	# oggvorbismeta pulls a different version of the ogg crate,
+	# but only for tests
+	{ name = "oggvorbismeta" },
+]
+
 
 [sources]
 unknown-registry = "deny"
