chore: add Chocobo1 to contributors list for packaging

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -38,6 +38,15 @@
       ]
     },
     {
+      "login": "Chocobo1",
+      "name": "Chocobo1",
+      "avatar_url": "https://avatars.githubusercontent.com/u/9395168?v=4",
+      "profile": "https://myprojects.tzou.me/projects/",
+      "contributions": [
+        "platform"
+      ]
+    },
+    {
       "login": "MiguelDreamer",
       "name": "Miguel",
       "avatar_url": "https://avatars.githubusercontent.com/u/31966940?v=4",
