--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
 
       - name: '🔍 Static analysis: run Clippy'
         uses: giraffate/clippy-action@v1
-        if: matrix.target == 'x86_64-unknown-linux-musl'
+        if: matrix.target == 'x86_64-unknown-linux-musl' && github.event_name != 'release'
         with:
           clippy_flags: --no-deps --all-targets --all-features -- -D warnings
           reporter: github-check
