--- a/packages/optivorbis/Cargo.toml
+++ b/packages/optivorbis/Cargo.toml
@@ -40,7 +40,7 @@ crate-type = ["lib", "cdylib"]
 
 [build-dependencies]
 git2 = { version = "0.17.2", default-features = false }
-time = { version = "0.3.26", default-features = false, features = ["std"] }
+chrono = { version = "0.4.26", default-features = false }
 
 [dev-dependencies]
 pretty_env_logger = "0.5.0"
