feat!: add `SOURCE_DATE_EPOCH` specification support
This addresses issue #41.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,12 @@ optivorbis = { version = "0.1.4", path = "packages/optivorbis" }
 vorbis_bitpack = { version = "0.1.1", path = "packages/vorbis_bitpack" }
 log = "0.4.20"
 
+[patch.crates-io]
+# Temporarily use our fork of the ogg crate with a page checksum retrieval
+# feature we need. Related PR:
+#
+ogg = { git = "https://github.com/OptiVorbis/ogg" }
+
 [profile.release]
 lto = "fat"
 codegen-units = 1
