chore(deps): use newer upstream `ogg` crate commit instead of fork
The PR we sent was merged.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,10 @@ vorbis_bitpack = { version = "0.1.1", path = "packages/vorbis_bitpack" }
 log = "0.4.20"
 
 [patch.crates-io]
-# Temporarily use our fork of the ogg crate with a page checksum retrieval
+# Temporarily use a newer ogg crate commit with a page checksum retrieval
 # feature we need. Related PR:
 # https://github.com/RustAudio/ogg/pull/38
-ogg = { git = "https://github.com/OptiVorbis/ogg" }
+ogg = { git = "https://github.com/RustAudio/ogg", rev = "f22b096a" }
 
 [profile.release]
 lto = "fat"
