--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
 
   ci:
     strategy:
+      fail-fast: false
       matrix:
         target:
           - x86_64-unknown-linux-musl
@@ -52,16 +53,19 @@ jobs:
         include:
           - target: x86_64-unknown-linux-musl
             runner: ubuntu-22.04
-            cli-executable: optivorbis
           - target: aarch64-unknown-linux-musl
             runner: ubuntu-22.04
-            cli-executable: optivorbis
+          # We build with glibc for AArch64 because using -Zdoctest-xcompile
+          # triggers https://github.com/rust-lang/rust/issues/89626 since at
+          # least December 2, 2023, documentation tests are built in a way
+          # that does not honor the sanctioned linker configuration changes,
+          # and we still want to get some testing coverage for AArch64.
+          - target: aarch64-unknown-linux-gnu
+            runner: ubuntu-22.04
           - target: x86_64-pc-windows-gnu
             runner: windows-2022
-            cli-executable: optivorbis.exe
           - target: x86_64-apple-darwin
             runner: macos-11
-            cli-executable: optivorbis
 
     name: CI (${{ matrix.target }})
     runs-on: ${{ matrix.runner }}
@@ -82,7 +86,7 @@ jobs:
           components: rust-src, rustfmt, clippy
 
       - name: 🧰 Install ARM64 cross-compilation toolchain
-        if: matrix.target == 'aarch64-unknown-linux-musl'
+        if: startsWith(matrix.target, 'aarch64-unknown-linux')
         run: sudo apt update && sudo apt install -yq gcc-aarch64-linux-gnu qemu-user
 
       - name: 💨 Cache Rust artifacts
@@ -111,7 +115,7 @@ jobs:
         uses: EmbarkStudios/cargo-deny-action@1e59595bed8fc55c969333d08d7817b36888f0c5 # v1
 
       - name: ✔️ Run tests
-        run: cargo test --release --target ${{ matrix.target }} -Zdoctest-xcompile
+        run: cargo test --release --target ${{ matrix.target }}
           -p optivorbis -p optivorbis_cli -p vorbis_bitpack
 
       - name: 📚 Build documentation
@@ -127,7 +131,9 @@ jobs:
         uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3
         with:
           name: OptiVorbis CLI (${{ matrix.target }})
-          path: target/${{ matrix.target }}/release/${{ matrix.cli-executable }}
+          path: |
+            target/${{ matrix.target }}/release/optivorbis*
+            !target/${{ matrix.target }}/release/optivorbis.d
 
   web_demo:
     name: Web demo
