--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,3 +5,6 @@
 [target.'cfg(all(target_os = "linux", target_arch = "aarch64"))']
 linker = 'aarch64-linux-gnu-gcc'
 runner = 'qemu-aarch64'
+
+[target.aarch64-unknown-linux-gnu]
+runner = ['qemu-aarch64', '/usr/aarch64-linux-gnu/lib/ld-linux-aarch64.so.1']
