chore(Cargo.toml): add `documentation` metadata for published packages
This makes the documentation at `docs.rs` slightly more discoverable on
`crates.io` search result pages.

--- a/packages/vorbis_bitpack/Cargo.toml
+++ b/packages/vorbis_bitpack/Cargo.toml
@@ -5,6 +5,7 @@ authors.workspace = true
 license = "BSD-3-Clause"
 version = "0.1.1"
 repository.workspace = true
+documentation = "https://docs.rs/vorbis_bitpack"
 readme = true
 keywords = ["vorbis", "bitpacking", "bitpack", "compression", "serialization"]
 categories = ["compression", "no-std"]
