--- a/packages/optivorbis/Cargo.toml
+++ b/packages/optivorbis/Cargo.toml
@@ -6,6 +6,7 @@ license = "AGPL-3.0-or-later OR BSD-3-Clause"
 version.workspace = true
 homepage.workspace = true
 repository.workspace = true
+documentation = "https://docs.rs/optivorbis"
 readme = "../../README.md"
 keywords.workspace = true
 categories.workspace = true
