--- a/packages/optivorbis/Cargo.toml
+++ b/packages/optivorbis/Cargo.toml
@@ -44,5 +44,12 @@ pretty_env_logger = "0.5.0"
 oggvorbismeta = "0.1.0"
 
 [features]
+default = ["source-date-epoch"]
+
+source-date-epoch = []
+
 wasm-bindings = ["wasm-bindgen"]
 wasm-web-bindings = ["wasm-bindings", "console_log", "console_error_panic_hook", "getrandom/js"]
+
+[package.metadata.docs.rs]
+rustdoc-args = ["--cfg", "docsrs"]
