ci: give MacOS ARM runners a shot for generating and testing binaries
These are allegedly also much faster than x64 runners, mainly because
those x64 runners use old x64 CPUs that are not really a good thing to
compare against.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
           - aarch64-unknown-linux-musl
           - x86_64-pc-windows-gnu
           - x86_64-apple-darwin
+          - aarch64-apple-darwin
         include:
           - target: x86_64-unknown-linux-musl
             runner: ubuntu-22.04
@@ -59,6 +60,8 @@ jobs:
             runner: windows-2022
           - target: x86_64-apple-darwin
             runner: macos-12
+          - target: aarch64-apple-darwin
+            runner: macos-14
 
     name: CI (${{ matrix.target }})
     runs-on: ${{ matrix.runner }}
