chore: ignore unactionable `cargo deny` advisory

--- a/deny.toml
+++ b/deny.toml
@@ -13,6 +13,11 @@ targets = [
 [advisories]
 version = 2
 yanked = "deny"
+ignore = [
+  # Not so relevant advisory pulled by an old windows crate version
+  # acid_io depends on
+  "RUSTSEC-2022-0008",
+]
 
 [licenses]
 version = 2
