--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,9 @@ jobs:
       - name: '🔍 Static analysis: run cargo deny'
         if: matrix.target == 'x86_64-unknown-linux-musl'
         uses: EmbarkStudios/cargo-deny-action@3f4a782664881cf5725d0ffd23969fcce89fd868 # v1
+        env:
+          # This action runs on a container without sccache
+          RUSTC_WRAPPER: ''
 
       - name: ✔️ Run tests
         run: cargo test --release --target ${{ matrix.target }} -Zdoctest-xcompile
