chore: finally update to ESLint v9 🚀
This major version upgrade was unnecessarily inconvenient, but at least
it was a good opportunity to simplify and improve JS/TS linting.

--- a/web/package.json
+++ b/web/package.json
@@ -15,17 +15,18 @@
     "../target/webpkg"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
+    "@eslint/js": "9.12.0",
+    "@types/eslint__js": "8.42.3",
+    "@typescript-eslint/parser": "8.8.1",
     "@wasm-tool/wasm-pack-plugin": "1.7.0",
     "autoprefixer": "10.4.20",
     "css-loader": "7.1.2",
     "cssnano": "7.0.6",
     "eslint": "9.12.0",
-    "eslint-config-airbnb-base": "15.0.0",
     "eslint-import-resolver-typescript": "3.6.3",
     "eslint-plugin-import": "2.31.0",
     "favicons-webpack-plugin": "6.0.1",
+    "globals": "15.11.0",
     "html-webpack-plugin": "5.6.0",
     "mini-css-extract-plugin": "2.9.1",
     "postcss": "8.4.47",
@@ -33,7 +34,8 @@
     "svg-inline-loader": "0.8.2",
     "tailwindcss": "3.4.13",
     "ts-loader": "9.5.1",
-    "typescript": "5.6.2",
+    "typescript": "5.6.3",
+    "typescript-eslint": "8.8.1",
     "webpack": "5.95.0",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.1.0"
