feat: make Ogg page CRC verification toggleable
Resolves #101. An OptiVorbis release with this feature is blocked until
https://github.com/RustAudio/ogg/pull/44 gets merged and an `ogg`
release with it is published, as patched dependencies can't be used on
`crates.io`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,7 @@ overflow-checks = true
 inherits = "release"
 debug = true
 strip = "none"
+
+[patch.crates-io]
+# TODO wait until upstream publishes a release with these changes to drop this patch and publish ours
+ogg = { git = "https://github.com/AlexTMjugador/ogg.git", branch = "feat/parse-opts" }
