chore: do not expose implicit, non-public optional dep features
I'm not considering this a breaking change because they were never meant
to be part of the public crate APIs, and nobody used them AFAIK anyway.

--- a/packages/optivorbis/Cargo.toml
+++ b/packages/optivorbis/Cargo.toml
@@ -51,11 +51,11 @@ default = ["source-date-epoch"]
 
 source-date-epoch = []
 
-wasm-bindings = ["wasm-bindgen"]
+wasm-bindings = ["dep:wasm-bindgen"]
 wasm-web-bindings = [
   "wasm-bindings",
-  "console_log",
-  "console_error_panic_hook",
+  "dep:console_log",
+  "dep:console_error_panic_hook",
   "getrandom/js",
 ]
 
