--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
   ],
   "devDependencies": {
     "@eslint/js": "9.19.0",
+    "@tailwindcss/postcss": "4.0.0",
     "@types/eslint__js": "8.42.3",
     "@typescript-eslint/parser": "8.21.0",
     "@wasm-tool/wasm-pack-plugin": "1.7.0",
@@ -32,7 +33,7 @@
     "postcss": "8.5.1",
     "postcss-loader": "8.1.1",
     "svg-inline-loader": "0.8.2",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.0",
     "ts-loader": "9.5.2",
     "typescript": "5.7.3",
     "typescript-eslint": "8.21.0",
