--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -12,3 +12,6 @@ runner = 'qemu-aarch64'
 # - https://github.com/rust-lang/rust/issues/46651#issuecomment-641172562
 # - https://github.com/rust-lang/rust/issues/46651#issuecomment-1847872105
 rustflags = ["-Clink-args=-lgcc"]
+
+[target.wasm32-unknown-unknown]
+rustflags = ["--cfg", 'getrandom_backend="wasm_js"']
