--- a/packages/optivorbis/Cargo.toml
+++ b/packages/optivorbis/Cargo.toml
@@ -26,7 +26,7 @@ tinyvec = { version = "1.8.1", default-features = false, features = [
   "rustc_1_57",
 ] }
 
-getrandom = "0.2.15"
+getrandom = "0.3.0"
 rand_xoshiro = "0.6.0"
 
 thiserror = "2.0.11"
@@ -56,7 +56,7 @@ wasm-web-bindings = [
   "wasm-bindings",
   "dep:console_log",
   "dep:console_error_panic_hook",
-  "getrandom/js",
+  "getrandom/wasm_js",
 ]
 
 [package.metadata.docs.rs]
