chore(deps/renovate): do not pin dev dependencies
This sort of pinning is exactly what `Cargo.lock` is for...

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:best-practices"
+    "config:recommended",
+    "docker:pinDigests",
+    "helpers:pinGitHubActionDigests",
+    ":configMigration"
   ],
   "addLabels": ["dependencies"],
   "automergeType": "branch",
