--- a/deny.toml
+++ b/deny.toml
@@ -6,6 +6,7 @@ targets = [
   { triple = "x86_64-unknown-linux-musl" },
   { triple = "aarch64-unknown-linux-musl" },
   { triple = "x86_64-pc-windows-gnu" },
+  { triple = "aarch64-apple-darwin" },
   { triple = "x86_64-apple-darwin" },
   { triple = "wasm32-unknown-unknown" },
 ]
@@ -13,7 +14,13 @@ targets = [
 [advisories]
 version = 2
 yanked = "deny"
-ignore = []
+ignore = [
+  # Ignore unmaintained humantime dependency advisory, as it's pulled by
+  # a transitive dependency of a direct dev dependency for which there already
+  # is a PR:
+  # https://github.com/seanmonstar/pretty-env-logger/pull/60
+  "RUSTSEC-2025-0014"
+]
 
 [licenses]
 version = 2
